// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toHaveStyleRule returns a message explaining the failure 1`] = `
"Expected color to match:
  blue
Received:
  red"
`;

exports[`toHaveStyleRule returns a message explaining the failure 2`] = `
"Expected color not to match:
  red
Received:
  red"
`;
